--- a/people.html
+++ b/people.html
@@ -101,29 +101,29 @@
                 <h2>Reuben Saamwan Pul, PhD student</h2>
                 <p class="email">reubenmw@buffalo.edu</p>
                 <p>
-                Reuben completed her MS from UB BME in 2025 and is pursuing a PhD in Biomedical Engineering.
+                Reuben completed her MS from UB BME and is pursuing a PhD in Biomedical Engineering.
                 </p>
             </div>
         </section>
 
                 <section class="person-box">
-            <img src="graphics/members/yuan_web.jpg" class="profile-img" alt="Yuan Luo">
+            <img src="graphics/members/yang_web.jpg" class="profile-img" alt="Yang Jiao">
             <div class="person-info">
-                <h2>Yuan Luo, PhD student</h2>
-                <p class="email">yuanluo@buffalo.edu</p>
+                <h2>Yang Jiao, PhD student</h2>
+                <p class="email">yjiao2@buffalo.edu</p>
                 <p>
-                Yuan completed her MS from China Pharmaceutical University and is pursuing a PhD in Biomedical Engineering.
+                Reuben completed her MS from UB BME and is pursuing a PhD in Biomedical Engineering.
                 </p>
             </div>
         </section>
 
                 <section class="person-box">
-            <img src="graphics/members/yuan_web.jpg" class="profile-img" alt="Yuan Luo">
+            <img src="graphics/members/yuqi_web.jpg" class="profile-img" alt="Yuqi Chen">
             <div class="person-info">
-                <h2>Yuan Luo, PhD student</h2>
-                <p class="email">yuanluo@buffalo.edu</p>
+                <h2>Yuqi Chen, PhD student</h2>
+                <p class="email">ychen488@buffalo.edu</p>
                 <p>
-                Yuan completed her MS from China Pharmaceutical University and is pursuing a PhD in Biomedical Engineering.
+                Yuqi completed her MS from ??? University and is pursuing a PhD in Biomedical Engineering.
                 </p>
             </div>
         </section>
