--- a/people.html
+++ b/people.html
@@ -53,9 +53,13 @@
         <!-- Template used for each member (kept your content but improved formatting) -->
         <section class="person-box">
             <img src="graphics/members/weichiao_web.jpg" class="profile-img" alt="Wei-Chiao Huang">
-            <h2>Wei-Chiao Huang</h2>
-            <p class="email">weichiao@buffalo.edu</p>
-            <p>Wei-Chiao is a postdoctoral scholar who completed her PhD at UB BME for the studies of liposomal vaccines. She holds her MS degree at Tsing Hua University in Taiwan.</p>
+            <div class="person-info">
+                <h2>Wei-Chiao Huang, Post Doc researcher</h2>
+                <p class="email">weichiao@buffalo.edu</p>
+                <p>
+                Wei-Chiao is a postdoctoral scholar who completed her PhD at UB BME for the studies of liposomal vaccines. She holds her MS degree at Tsing Hua University in Taiwan.                
+                </p>
+            </div>
         </section>
         
         <section class="person-box">
