--- a/people.html
+++ b/people.html
@@ -54,7 +54,7 @@
         <section class="person-box">
             <img src="graphics/members/weichiao_web.jpg" class="profile-img" alt="Wei-Chiao Huang">
             <div class="person-info">
-                <h2>Wei-Chiao Huang, Post Doc researcher</h2>
+                <h2>Wei-Chiao Huang, Postdoctoral researcher</h2>
                 <p class="email">weichiao@buffalo.edu</p>
                 <p>
                 Wei-Chiao is a postdoctoral scholar who completed her PhD at UB BME for the studies of liposomal vaccines. She holds her MS degree at Tsing Hua University in Taiwan.                
