--- a/people.html
+++ b/people.html
@@ -31,6 +31,8 @@
     <main id="main_text">
 
         <!-- PI Section -->
+        <h1>Principal Investigator</h1>
+        
         <section class="person-box">
             <img src="graphics/members/jon_web.jpg" class="profile-img" alt="Jonathan Lovell">
             <div class="person-info">
@@ -44,8 +46,6 @@
                 </p>
             </div>
         </section>
-
-        <hr>
 
         <!-- CURRENT MEMBERS -->
         <h1>Current Members</h1>
