--- a/people.html
+++ b/people.html
@@ -166,7 +166,7 @@
 
         <!-- ALUMNI -->
         <h1>Alumni</h1>
-        <section class="alumni-box">
+        <section class="person-box">
             <img src="graphics/members/shiqi_web.jpg" class="profile-img" alt="Shiqi Zhou">
             <div class="person-info">
                 <h2>Shiqi Zhou</h2>
@@ -177,7 +177,7 @@
             </div>
         </section>
 
-        <section class="alumni-box">
+        <section class="person-box">
             <img src="graphics/members/zack_web.jpg" class="profile-img" alt="Zacharay Sia">
             <div class="person-info">
                 <h2>Zacharay Sia</h2>
@@ -188,7 +188,7 @@
             </div>
         </section>
         
-        <section class="alumni-box">
+        <section class="person-box">
             <img src="graphics/members/moustafa_web.jpg" class="profile-img" alt="Moustafa Taha El Sayad Mohamed Mabrouk">
             <div class="person-info">
                 <h2>Moustafa Taha El Sayad Mohamed Mabrouk</h2>
@@ -198,14 +198,14 @@
             </div>
         </section>
         
-        <section class="alumni-box">
+        <section class="person-box">
             <img src="graphics/members/boyang_web.jpg" class="alumni-img" alt="Boyang Sun">
             <h2>Boyang Sun</h2>
             <p class="email">boyangsu@buffalo.edu</p>
             <p>Boyang completed his PhD on new drug formulations. He previously earned his MS in Chemical Engineering at UB and BS in Pharmaceutical Engineering at Henan Agricultural University.</p>
         </section>
 
-        <section class="alumni-box">
+        <section class="person-box">
             <img src="graphics/members/xuedan_web.jpg" class="alumni-img" alt="Xuedan He">
             <h2>Xuedan He</h2>
             <p class="email">xuedanhe@buffalo.edu</p>
