--- a/people.html
+++ b/people.html
@@ -158,6 +158,12 @@
         <!-- GROUP PHOTOS -->
         <h1>Group Photos</h1>
         <p>
+            <section class="hero-slider">
+                <div class="slider">
+                    <div class="slide"><img src="data1/images/labevent1.jpg" alt="Get Air 1-2025"></div>
+                    <div class="slide"><img src="data1/images/labevent2.jpg" alt="Get Air 2-2025"></div>
+                </div>
+            </section>
             See more photos on our 
             <a href="https://www.facebook.com/profile.php?id=100013044166634">Facebook page</a>.
         </p>
