--- a/publications.html
+++ b/publications.html
@@ -90,7 +90,11 @@
     <div class="publication">
         <span class="authors">T. Xu, M. Yang, J. Huang, L. Lu, D. Deng, Y. Sun, J.F. Lovell, Z. Lin, Y. Zheng, H. Jin</span> – 
         <a href="https://www.researchsquare.com/article/rs-7763100/v1" class="journal">Single-cell profiling of gastric cancer ascites reveals immunosuppressive remodeling and an epithelial-immune dual phenotype signature predictive for PD-1 immunotherapy responses</a>
-  
+  </div>
+    <div class="publication">
+        <span class="authors">L Lu, M Yang, D Deng, X Shi, JF Lovell, H Jin</span> – 
+        <a href="https://www.sciencedirect.com/science/article/abs/pii/S0010854525003765" class="journal">Nanovaccines: Antigen selection, stabilization, adjuvantation, formulation, and evaluation</a>
+ 
     
         <!-- 2021 -->
     <div class="pub-year">
