--- a/people.html
+++ b/people.html
@@ -201,24 +201,40 @@
                 <p class="email">mmabrouk@buffalo.edu</p>
                 <p>
                 Moustafa earned his PhD degree in 2025 and his studies focused on drug and vaccine formulation approaches. Moustafa was a former Fulbright foreign student, and completed his undergraduate and master degree from Alexandria University.
+                </p>
             </div>
         </section>
         
         <section class="person-box">
-            <img src="graphics/members/boyang_web.jpg" class="alumni-img" alt="Boyang Sun">
-            <h2>Boyang Sun</h2>
-            <p class="email">boyangsu@buffalo.edu</p>
-            <p>Boyang completed his PhD on new drug formulations. He previously earned his MS in Chemical Engineering at UB and BS in Pharmaceutical Engineering at Henan Agricultural University.</p>
+            <img src="graphics/members/boyang_web.jpg" class="profile-img" alt="Boyang Sun">
+            <div class="person-info">
+                <h2>Boyang Sun</h2>
+                <p class="email">boyangsu@buffalo.edu</p>
+                <p>
+                Boyang completed his PhD on new drug formulations. He previously earned his MS in Chemical Engineering at UB and BS in Pharmaceutical Engineering at Henan Agricultural University.</p>
+                </p>
+            </div>
         </section>
 
         <section class="person-box">
-            <img src="graphics/members/xuedan_web.jpg" class="alumni-img" alt="Xuedan He">
+            <img src="graphics/members/xuedan_web.jpg" class="profile-img" alt="Xuedan He">
+            <div class="person-info">
             <h2>Xuedan He</h2>
-            <p class="email">xuedanhe@buffalo.edu</p>
-            <p>Xuedan completed her PhD developing liposomal peptide cancer vaccines. She previously earned an MS in Nanochemistry from University of Madiera.</p>
+                <p class="email">xuedanhe@buffalo.edu</p>
+                <p>
+                Xuedan completed her PhD developing liposomal peptide cancer vaccines. She previously earned an MS in Nanochemistry from University of Madiera.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/sanjana_web.jpg" class="profile-img" alt="Sanjana Ghosh">
+            <div class="person-info">
+                <h2>Sanjana Ghosh</h2>
+                <p class="email">sghosh22@buffalo.edu</p>
+                <p>
+                Sanjana completed her MS degree in the lab working on a light-triggered ciprofloxacin liposome formulation. She is continuing on for a PhD to develop and assess light-activated irinotecan liposome formulations. 
+                </p>
+            </div>
         </section>
         
-        <section class="alumni-box">
-            <img src="graphics/members/yumiao_web.jpg" class="alumni-img" alt="Yumiao Zhang">
-            <h3>Yumiao Zhang</h3>
-            <p>Yumiao was the first PhD graduate in the
