--- a/people.html
+++ b/people.html
@@ -118,12 +118,12 @@
         </section>
 
         <section class="person-box">
-            <img src="graphics/members/yang_web.jpg" class="profile-img" alt="Yang Jiao">
+            <img src="graphics/members/yangjiao_web.jpg" class="profile-img" alt="Yang Jiao">
             <div class="person-info">
                 <h2>Yang Jiao, PhD student</h2>
                 <p class="email">yjiao2@buffalo.edu</p>
                 <p>
-                Reuben completed her MS from UB BME and is pursuing a PhD in Biomedical Engineering.
+                Yang completed her MS from UB BME and is pursuing a PhD in Biomedical Engineering.
                 </p>
             </div>
         </section>
@@ -176,7 +176,6 @@
             <img src="graphics/members/shiqi_web.jpg" class="profile-img" alt="Shiqi Zhou">
             <div class="person-info">
                 <h2>Shiqi Zhou</h2>
-                <p class="email">shiqizho@buffalo.edu</p>
                 <p>
                 Shiqi earned her PhD degree in 2025 and her studies focused on CD8 T cell epitope vaccines for cancers. She completed her MS degree in UB BME.
                 </p>
@@ -187,7 +186,6 @@
             <img src="graphics/members/zack_web.jpg" class="profile-img" alt="Zacharay Sia">
             <div class="person-info">
                 <h2>Zacharay Sia</h2>
-                <p class="email">zrsia@buffalo.edu</p>
                 <p>
                 Zack earned his PhD degree in 2025 and his studies focused on development of vaccine adjuvants for infectious diseases. He graduated from University of Rochester with an undergraduate degree in Biomedical Engineering.
                 </p>
@@ -198,7 +196,6 @@
             <img src="graphics/members/moustafa_web.jpg" class="profile-img" alt="Moustafa Taha El Sayad Mohamed Mabrouk">
             <div class="person-info">
                 <h2>Moustafa Taha El Sayad Mohamed Mabrouk</h2>
-                <p class="email">mmabrouk@buffalo.edu</p>
                 <p>
                 Moustafa earned his PhD degree in 2025 and his studies focused on drug and vaccine formulation approaches. Moustafa was a former Fulbright foreign student, and completed his undergraduate and master degree from Alexandria University.
                 </p>
@@ -209,7 +206,6 @@
             <img src="graphics/members/boyang_web.jpg" class="profile-img" alt="Boyang Sun">
             <div class="person-info">
                 <h2>Boyang Sun</h2>
-                <p class="email">boyangsu@buffalo.edu</p>
                 <p>
                 Boyang completed his PhD on new drug formulations. He previously earned his MS in Chemical Engineering at UB and BS in Pharmaceutical Engineering at Henan Agricultural University.</p>
                 </p>
@@ -220,7 +216,6 @@
             <img src="graphics/members/xuedan_web.jpg" class="profile-img" alt="Xuedan He">
             <div class="person-info">
             <h2>Xuedan He</h2>
-                <p class="email">xuedanhe@buffalo.edu</p>
                 <p>
                 Xuedan completed her PhD developing liposomal peptide cancer vaccines. She previously earned an MS in Nanochemistry from University of Madiera.
                 </p>
@@ -228,12 +223,231 @@
         </section>
 
         <section class="person-box">
+            <img src="graphics/members/breandan_web.jpg" class="profile-img" alt="Breandan Quinn">
+            <div class="person-info">
+                <h2>Breandan Quinn</h2>
+                <p>
+                Breandad was a Research and Animal Technician in our group for several years. He is a UB graduate with a degree in biology. He subsequently completed an MS degree at University of Rochester.
+                </p>
+            </div>
+        </section>
+        
+        <section class="person-box">
             <img src="graphics/members/sanjana_web.jpg" class="profile-img" alt="Sanjana Ghosh">
             <div class="person-info">
                 <h2>Sanjana Ghosh</h2>
-                <p class="email">sghosh22@buffalo.edu</p>
                 <p>
                 Sanjana completed her MS degree in the lab working on a light-triggered ciprofloxacin liposome formulation. She is continuing on for a PhD to develop and assess light-activated irinotecan liposome formulations. 
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/jumin_web.jpg" class="profile-img" alt="Jumin Geng">
+            <div class="person-info">
+                <h2>Jumin Geng</h2>
+                <p>
+                Jumin Geng was a Research and Animal Technician in our group for several years. She recently relocated to Philadelphia and is greatly missed!
+                </p>
+            </div>
+        </section>
+
+         <section class="person-box">
+            <img src="graphics/members/upendra_web.jpg" class="profile-img" alt="Upendra Chitgupi">
+            <div class="person-info">
+                <h2>Upendra Chitgupi</h2>
+                <p>
+                Upendra graduated with his PhD in 2019 and is starting a job at Nektar Therapeutics.
+                </p>
+            </div>
+        </section>
+        
+        <section class="person-box">
+            <img src="graphics/members/cuiyan_web.jpg" class="profile-img" alt="Cuiyan Lin">
+            <div class="person-info">
+                <h2>Cuiyan Lin</h2>
+                <p>
+                Coming from Brooklyn, Cuiyan is the first BME undergraduate student who has continued on to graduate studies in our group. She completed her MS degree and now working for Regeneron.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/kevin_web.jpg" class="profile-img" alt="Kevin Carter">
+            <div class="person-info">
+                <h2>Kevin Carter</h2>
+                <p>
+                Kevin completed his undergraduate and PhD degree developing light-active liposome formulations and is currently working for Teva Pharmaceuticals.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/jasmin_web.jpg" class="profile-img" alt="Jasmin Fe Federizon">
+            <div class="person-info">
+                <h2>Jasmin Fe Federizon</h2>
+                <p>
+                Jasmin completed her PhD in the Chemistry Department and is now working for Intel.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/sophie_web.jpg" class="profile-img" alt="Sophie Wang">
+            <div class="person-info">
+                <h2>Sophie Wang</h2>
+                <p>
+                Sophie completed her undergraduate studies at Cornell her MSc in the Biomedical Engineering Department. She has moved on to pursue a PhD at University of Maryland in Biomedical Engineering.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/dan_web.jpg" class="profile-img" alt="Daniel Feldman">
+            <div class="person-info">
+                <h2>Daniel Feldman</h2>
+                <p>
+                Dan graudated with his MS degree in 2015 and found employment in medical devices industry.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/james_web.jpg" class="profile-img" alt="James Rieffel">
+            <div class="person-info">
+                <h2>James Rieffel</h2>
+                <p>
+                James graduated with his MS from Biomedical Engineering in 2015. James is from Ithaca, NY and is currently working as a product development manager in industry.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/lou_web.jpg" class="profile-img" alt="Kun Lou">
+            <div class="person-info">
+                <h2>Kun Lou</h2>
+                <p>
+                Lou graduated with his MS in the Chemical and Biological Engineering in 2014 and moved onto PhD studies at University of Tennessee. Kun Lou is from Shanghai, China.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/marychris_web.jpg" class="profile-img" alt="Mary Chris Arena">
+            <div class="person-info">
+                <h2>Mary Chris Arena</h2>
+                <p>
+                Mary-Chris performed undergraduate research in the lab and went on to complete an MS degree at Rochester Institute of Technology and then got a position at Sydor Instruments.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/raj_web.jpg" class="profile-img" alt="Rajendiran Venugopal">
+            <div class="person-info">
+                <h2>Rajendiran Venugopal</h2>
+                <p>
+                Raj is a professor of Chemistry at the Central University of Tamil Nadu in India. He was a Raman fellowship and is a visiting scholar in the group.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/wentao_web.jpg" class="profile-img" alt="Wentao Song">
+            <div class="person-info">
+                <h2>Wentao Song</h2>
+                <p>
+                Wentao completed his MS in our lab.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/sunanda_web.jpg" class="profile-img" alt="Sunanda Kumar">
+            <div class="person-info">
+                <h2>Sunanda Kumar</h2>
+                <p>
+                Sunanda completed her MS in our lab and is now working at Gilead.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/hailey_web.jpg" class="profile-img" alt="Hailey Kilian">
+            <div class="person-info">
+                <h2>Hailey Kilian</h2>
+                <p>
+                Hailey obtained her MS and undergraduate degree from UB BME in the lab. She worked on liposome formulations for contrast imaging and light-triggered cargo release.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/hsinju_web.jpg" class="profile-img" alt="Hsin-Ju Teng">
+            <div class="person-info">
+                <h2>Hsin-Ju Teng</h2>
+                <p>
+                Hsin-Ju obtained her MS degree here in UB BME. She worked on antigen expression and vaccine related research.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/dyego_web.jpg" class="profile-img" alt="Dyego Miranda">
+            <div class="person-info">
+                <h2>Dyego Miranda</h2>
+                <p>
+                With a full CAPES scholarship, Dyego completed his PhD in 2018 then returned to his native Brazil.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/dandan_web.jpg" class="profile-img" alt="Dandan Luo">
+            <div class="person-info">
+                <h2>Dandan Luo</h2>
+                <p>
+                Dandan completed her PhD in 2018 with 9 first author publications and is working on PK/PD modeling in industry at CSL Behring.
+                </p>
+            </div>
+        </section>
+
+         <section class="person-box">
+            <img src="graphics/members/shuai_web.jpg" class="profile-img" alt="Shuai Shao">
+            <div class="person-info">
+                <h2>Shuai Shao</h2>
+                <p>
+                Shuai completed his PhD in 2018 and is a now a faculty member in China.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/haoyuan_web.jpg" class="profile-img" alt="Haoyuan Huang">
+            <div class="person-info">
+                <h2>Haoyuan Huang</h2>
+                <p>
+                Haoyuan completed his PhD in 2016 and is pursuing a career in industry in China.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/yang_web.jpg" class="profile-img" alt="Yang Zhoug">
+            <div class="person-info">
+                <h2>Yang Zhoug</h2>
+                <p>
+                Yang Zhou spent a year in our group as a visiting scholar and is a lecturer in the college of chemistry at Shandong Normal University in Jinan China.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/yumiao_web.jpg" class="profile-img" alt="Yumiao Zhang">
+            <div class="person-info">
+                <h2>Yumiao Zhang</h2>
+                <p>
+                Yumiao was the first PhD graduate of the lab and has left some big footsteps for everyone to follow! He is a full professor of Chemical Engineering at Tianjin University.
                 </p>
             </div>
         </section>
