--- a/people.html
+++ b/people.html
@@ -162,6 +162,23 @@
                 <div class="slider">
                     <div class="slide"><img src="data1/images/labevent1.jpg" alt="Get Air 1-2025"></div>
                     <div class="slide"><img src="data1/images/labevent2.jpg" alt="Get Air 2-2025"></div>
+                    <div class="slide"><img src="data1/images/labevent3.jpg" alt="Get Air 2-2025"></div>
+                    <div class="slide"><img src="data1/images/labevent4.jpg" alt="Get Air 2-2025"></div>
+                    <div class="slide"><img src="data1/images/labevent5.jpg" alt="Get Air 2-2025"></div>
+                    <div class="slide"><img src="data1/images/labevent6.jpg" alt="Get Air 2-2025"></div>
+                    <div class="slide"><img src="data1/images/labevent7.jpg" alt="Get Air 2-2025"></div>
+                    <div class="slide"><img src="data1/images/labevent8.jpg" alt="Get Air 2-2025"></div>
+                    <div class="slide"><img src="data1/images/labevent9.jpg" alt="Get Air 2-2025"></div>
+                    <div class="slide"><img src="data1/images/labevent10.jpg" alt="Get Air 2-2025"></div>
+                    <div class="slide"><img src="data1/images/labevent11.jpg" alt="Get Air 2-2025"></div>
+                    <div class="slide"><img src="data1/images/labevent12.jpg" alt="Get Air 2-2025"></div>
+                    <div class="slide"><img src="data1/images/labevent13.jpg" alt="Get Air 2-2025"></div>
+                    <div class="slide"><img src="data1/images/labevent14.jpg" alt="Get Air 2-2025"></div>
+                    <div class="slide"><img src="data1/images/labevent15.jpg" alt="Get Air 2-2025"></div>
+                    <div class="slide"><img src="data1/images/labevent16.jpg" alt="Get Air 2-2025"></div>
+                    <div class="slide"><img src="data1/images/labevent17.jpg" alt="Get Air 2-2025"></div>
+                    <div class="slide"><img src="data1/images/labevent18.jpg" alt="Get Air 2-2025"></div>
+
                 </div>
             </section>
             See more photos on our 
