--- a/people.html
+++ b/people.html
@@ -457,4 +457,15 @@
                 </p>
             </div>
         </section>
-        
+    </main>
+        window.onload = function() {
+        const slider = document.querySelector('.slider');
+        const scrollWidth = slider.scrollWidth / 2; // Assuming you duplicated the slides
+        document.styleSheets[0].insertRule(`
+            @keyframes continuous-slide {
+                0% { transform: translateX(0); }
+                100% { transform: translateX(-${scrollWidth}px); }
+            }
+        `, 0);
+    };
+</body>
