--- a/publications.html
+++ b/publications.html
@@ -94,8 +94,30 @@
     <div class="publication">
         <span class="authors">L Lu, M Yang, D Deng, X Shi, JF Lovell, H Jin</span> – 
         <a href="https://www.sciencedirect.com/science/article/abs/pii/S0010854525003765" class="journal">Nanovaccines: Antigen selection, stabilization, adjuvantation, formulation, and evaluation</a>
- 
-    
+ </div>
+    <div class="publication">
+        <span class="authors">Y. Luo, Q. Li, S. Zhou, H. Oh, J. Jablonski, Y. Song, Y. Sun, Y. Wu, H. Zhu, J. Ortega, J. F. Lovell</span> – 
+        <a href="https://www.sciencedirect.com/science/article/pii/S0142961225006738" class="journal">Lipid nanoparticles that co-deliver poly(I:C) and short peptide antigens elicit anti-tumor responses with vaccination</a>
+ </div>
+    <div class="publication">
+        <span class="authors">M Yang, S Wu, J Zhang, L Lu, D Deng, Q Xia, JF Lovell, X Shi, H Jin</span> – 
+        <a href="https://spj.science.org/doi/full/10.34133/research.0866" class="journal">Immunotherapies for Aging and Age-Related Diseases: Advances, Pitfalls, and Prospects</a>
+</div>
+    <div class="publication">
+        <span class="authors">G Liu, H Ren, J Li, W Dong, S Li, N Zhang, C Cheng, JF Lovell, Y Zhang</span> – 
+        <a href="https://spj.science.org/doi/full/10.34133/research.0866" class="journal">Covalent organic framework eliciting a click-based intracellular copper accumulation cascade for cuproptosis cancer therapy</a>
+</div>
+    <div class="publication">
+        <span class="authors">G Liu, H Ren, J Li, W Dong, S Li, N Zhang, C Cheng, JF Lovell, Y Zhang</span> – 
+        <a href="https://www.cell.com/cell-biomaterials/fulltext/S3050-5623(25)00117-5" class="journal">Covalent organic framework eliciting a click-based intracellular copper accumulation cascade for cuproptosis cancer therapy</a>
+</div>
+    <div class="publication">
+        <span class="authors">M. C. Mariano, M. G. Hvasta, K. A. Dowd, W-C. Huang, H. S. Jung, L. R. Evanson, G. I. Georgiev, J. C. Frei, J. F. Lovell, T. C. Pierson, B. Kuhlman, J. R. Lai</span> – 
+        <a href="https://pubs.acs.org/doi/full/10.1021/acschembio.5c00253" class="journal">Design of Hyperglycosylated Zika Virus E Proteins that Focus Antibody Recognition on the Complex E Dimer Epitope</a>
+</div>
+    <div class="publication">
+        <span class="authors">M. C. Mariano, M. G. Hvasta, K. A. Dowd, W-C. Huang, H. S. Jung, L. R. Evanson, G. I. Georgiev, J. C. Frei, J. F. Lovell, T. C. Pierson, B. Kuhlman, J. R. Lai</span> – 
+        <a href="https://pubs.acs.org/doi/full/10.1021/acschembio.5c00253" class="journal">Design of Hyperglycosylated Zika Virus E Proteins that Focus Antibody Recognition on the Complex E Dimer Epitope</a>
         <!-- 2021 -->
     <div class="pub-year">
         <h2>2021</h2>
