--- a/publications.html
+++ b/publications.html
@@ -116,8 +116,32 @@
         <a href="https://pubs.acs.org/doi/full/10.1021/acschembio.5c00253" class="journal">Design of Hyperglycosylated Zika Virus E Proteins that Focus Antibody Recognition on the Complex E Dimer Epitope</a>
 </div>
     <div class="publication">
-        <span class="authors">M. C. Mariano, M. G. Hvasta, K. A. Dowd, W-C. Huang, H. S. Jung, L. R. Evanson, G. I. Georgiev, J. C. Frei, J. F. Lovell, T. C. Pierson, B. Kuhlman, J. R. Lai</span> – 
-        <a href="https://pubs.acs.org/doi/full/10.1021/acschembio.5c00253" class="journal">Design of Hyperglycosylated Zika Virus E Proteins that Focus Antibody Recognition on the Complex E Dimer Epitope</a>
+        <span class="authors">T Tarvirdizadeh, WC Huang, N Farizio, J Lovell, J Lang</span> – 
+        <a href="https://www.ahajournals.org/doi/10.1161/res.137.suppl_1.Fri017" class="journal">Enhancing Cardiomyocyte Uptake of Cobalt Porphyrin-Phospholipid (CoPoP) Liposomes</a>
+</div>
+    <div class="publication">
+        <span class="authors">H. Jin, Z. Deng, L. Lu, T. Xu, Z. Zhao, Y. Geng, L. Liu, M. Yang, Y. Zheng, J.F. Lovell, J. Ding</span> – 
+        <a href="https://www.ahajournals.org/doi/10.1161/res.137.suppl_1.Fri017" class="journal">Enhancing Antitumor Nanovaccine Efficacy via Integrated Cholesterol Modulation In Situ</a>
+</div>
+    <div class="publication">
+        <span class="authors">J.F. Lovell, K. Miura, Y.O. Baik, C. Lee, Y. Choi, J.Y. Lee, C. A. Long, M. Ylade, R. Lee-Llacer, N. De Asis, M. Trinidad-Aseron, J. M. Ranola, L. Zoleta De Jesus, H. Her</span> – 
+        <a href="https://www.mdpi.com/2076-393X/13/8/776" class="journal">Year-Long Antibody Response to the EuCorVac-19 SARS-CoV-2 Vaccine in Healthy Filipinos</a>
+  </div>
+    <div class="publication">
+        <span class="authors">J. WP. Hayes, J. C. Edwards, K. Ramirez Valdez, S. Crossley, R. Fortes De Brito, D. Munir, K. Hanson, K. Paschos, K. Polra, J. An, J. G. Calvert, M. Bonnet DI PLACIDO, J.F. Lovell, R. Shattock, J.A. Hammond, R. J. Owens, S. P. Graham </span> – 
+        <a href="https://www.mdpi.com/2076-393X/13/8/776" class="journal">Evaluation of the contribution of the minor envelope complex glycoprotein 3 to the porcine reproductive and respiratory syndrome virus 1 neutralizing antibody response</a>
+</div>
+    <div class="publication">
+        <span class="authors">R. Ahmmed, E. Kluiszo, S. Aygun-Sunar, M. Willadsen, H. L. Kutscher, J.F. Lovell, U. Sunar</span> – 
+        <a href="https://www.mdpi.com/1422-0067/26/12/5571" class="journal">Quantitative Fluorescence Imaging of Chemophototherapy Drug Pharmacokinetics Using Laparoscopic SFDI</a> 
+</div>
+    <div class="publication">
+        <span class="authors">T. TN Phan, D. J. Thiono, M. G. Hvasta, R. P. Shah, G. Prida Ajo, W. C. Huang, J. F. Lovell, S. Tian, A. M de Silva, B. Kuhlman</span> – 
+        <a href="https://www.nature.com/articles/s41541-025-01179-w" class="journal">Multivalent administration of dengue E dimers on liposomes elicits type-specific neutralizing responses without immune interference</a>
+</div>
+    <div class="publication">
+        <span class="authors">X. L. Liu, X. Dong, S.C. Yang, X. Lai, H.J. Liu, Y. Gao, H.Y. Feng, M. H. Zhu, Y. Yuan, Q. Lu, J. F. Lovell, H.Z. Chen, C. Fang</span> – 
+        <a href="https://advanced.onlinelibrary.wiley.com/doi/10.1002/advs.202412806" class="journal">Biomimetic Liposomal Nanoplatinum for Targeted Cancer Chemophototherapy</a>         
         <!-- 2021 -->
     <div class="pub-year">
         <h2>2021</h2>
