--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,15 @@
 <!-- 2026 -->
      <div class="pub-year">
         <h2>2026</h2>
+</div>
+    <div class="publication">
+        <span class="authors">D. Ivanochko, K. Miura, S. Hailemariam, R. Ravichandran, Y. Song, W.C. Huang, R. Stoter, K. Teelen, G.J Van Gemert, E. M. Leaf, S. Chan, C. Men, A. Semesi, C. Shiu, R.S. MacGill, C.A. Long, M.M. Jore, N. P. King, J. F. Lovell, J.P. Julien</span> – 
+        <a href="https://www.nature.com/articles/s41467-026-68761-1" class="journal">A stabilized tandem antigen chimera that elicits potent malaria transmission-reducing activity</a> 
     </div>
+    <div class="publication">
+        <span class="authors">C. K. Lee, J. F. Lovell, J. S. Yun, S. K. Kim, B. M. Lee, D. H. Ha, J. Y. Lee, C. G. Lee, Y. R. Lee, W. C. Huang, J. Han</span> – 
+        <a href="https://patents.google.com/patent/US12527859B2/en" class="journal">Vaccine composition for chickenpox or Varicella Zoster and method of using same</a> 
+     </div>
     <div class="publication">
         <span class="authors">T Xu, J Huang, Y Liu, L Lu, JF Lovell, M Zhu, H Jin</span> – 
         <a href="https://www.nature.com/articles/s41698-025-01260-6" class="journal">A machine learning-defined cellular senescence signature systematically enhances prognostication and guides immunotherapy strategies for the treatment of gliomas</a>
@@ -141,7 +149,35 @@
 </div>
     <div class="publication">
         <span class="authors">X. L. Liu, X. Dong, S.C. Yang, X. Lai, H.J. Liu, Y. Gao, H.Y. Feng, M. H. Zhu, Y. Yuan, Q. Lu, J. F. Lovell, H.Z. Chen, C. Fang</span> – 
-        <a href="https://advanced.onlinelibrary.wiley.com/doi/10.1002/advs.202412806" class="journal">Biomimetic Liposomal Nanoplatinum for Targeted Cancer Chemophototherapy</a>         
+        <a href="https://advanced.onlinelibrary.wiley.com/doi/10.1002/advs.202412806" class="journal">Biomimetic Liposomal Nanoplatinum for Targeted Cancer Chemophototherapy</a> 
+ </div>
+    <div class="publication">
+        <span class="authors">Q. Li, R. Vendramelli, T. Truong, T. Jeevan, M. Black, Y. Luo, Y. Song, W.C. Huang, S. Zhou, Y. Berhane, B.A. Davidson, R.J. Webby, D. Kobasa, J.F. Lovell</span> – 
+        <a href="https://www.cell.com/cell-biomaterials/abstract/S3050-5623(25)00061-3" class="journal">Highly pathogenic avian influenza H5N1 clade 2.3.4.4b hemagglutinin and/or neuraminidase elicit immunity in a recombinant nanoparticle vaccine</a> 
+   </div>
+    <div class="publication">
+        <span class="authors">Li, R Yang, C Zhang, JF Lovell, Y Zhang</span> – 
+        <a href="https://pubs.acs.org/doi/full/10.1021/jacs.4c18511" class="journal">Manganese-Driven Plasmid Nanofibers Formed In Situ for Cancer Gene Delivery and Metalloimmunotherapy</a>   
+  </div>
+    <div class="publication">
+        <span class="authors">B Yue, W Gao, JF Lovell, H Jin, J Huang</span> – 
+        <a href="https://portlandpress.com/essaysbiochem/article/69/02/63/235810/The-cGAS-STING-pathway-in-cancer-immunity-dual" class="journal">The cGAS-STING pathway in cancer immunity: dual roles, therapeutic strategies, and clinical challenges</a>
+   </div>
+    <div class="publication">
+        <span class="authors">S. John, Y.Y. Vaquiz, N. Nyayaoathi, L. Kabbani, A. Nilam, J.F. Lovell, N.A. Wilson, Y. Yan, M. Mehrmohammadi</span> – 
+        <a href="https://www.mdpi.com/1424-8220/25/5/1597" class="journal">Photoacoustic Imaging for Image-Guided Gastric Tube Placement: Ex Vivo Characterization</a>
+   </div>
+    <div class="publication">
+        <span class="authors">Y. Song, W.C. Huang, D. Ivanochko, C. Long, Q. Li, L. Zhou, J.P. Julien, K. Miura, J.F. Lovell</span> – 
+        <a href="https://pubs.acs.org/doi/10.1021/acsnano.4c16865" class="journal">50-Fold Adjuvant and 20-Fold Antigen Vaccine Dose Sparing from Nanoliposome Display of a Stabilized Malarial Protein Antigen</a>  
+   </div>
+    <div class="publication">
+        <span class="authors">Zhang, JF Lovell, J Shi, Y Zhang</span> – 
+        <a href="https://pubs.acs.org/doi/10.1021/acsnano.4c16865" class="journal">Nanomaterials for co-immobilization of multiple enzymes</a>
+ </div>
+    <div class="publication">
+        <span class="authors">Y. Yuan, Q. Lin, H.Y. Feng, Y. Zhang, X. Lai, M.H. Zhu, J. Wang, J. Shi, Y. Huang, L. Zhang, Q. Lu, Z. Yuan, J.F. Lovell, H.Z. Chen, P. Sun, C. Fang</span> – 
+        <a href="https://www.nature.com/articles/s41467-025-56768-z" class="journal">A multistage drug delivery approach for colorectal primary tumors and lymph node metastases</a>       
         <!-- 2021 -->
     <div class="pub-year">
         <h2>2021</h2>
@@ -152,7 +188,7 @@
     </div>
     <div class="publication">
         <span class="authors">Kumar S., Jiang D., Sun B., Seeley K.V., Engle J.W., Sia Z., He X., Neelamegham S., Cai W. and Lovell J.F.</span> – 
-        <a href="https://advanced.onlinelibrary.wiley.com/doi/full/10.1002/anbr.202000013" class="journal">Labeling of Erythrocytes by Porphyrin-Phospholipid</a>
+        <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/bmm2.12080" class="journal">Labeling of Erythrocytes by Porphyrin-Phospholipid</a>
     <!-- 2020 -->
     <div class="pub-year">
         <h2>2020</h2>
