--- a/publications.html
+++ b/publications.html
@@ -177,7 +177,19 @@
  </div>
     <div class="publication">
         <span class="authors">Y. Yuan, Q. Lin, H.Y. Feng, Y. Zhang, X. Lai, M.H. Zhu, J. Wang, J. Shi, Y. Huang, L. Zhang, Q. Lu, Z. Yuan, J.F. Lovell, H.Z. Chen, P. Sun, C. Fang</span> – 
-        <a href="https://www.nature.com/articles/s41467-025-56768-z" class="journal">A multistage drug delivery approach for colorectal primary tumors and lymph node metastases</a>       
+        <a href="https://www.nature.com/articles/s41467-025-56768-z" class="journal">A multistage drug delivery approach for colorectal primary tumors and lymph node metastases</a>   
+   </div>
+    <div class="publication">
+        <span class="authors">J Li, R Yang, Y Yuan, H Ren, C Fang, JF Lovell, Y Zhang</span> – 
+        <a href="https://advanced.onlinelibrary.wiley.com/doi/full/10.1002/adfm.202414994" class="journal">An Oral Nanovaccine Secreted by Genetically Engineered and Ultrasound-Responsive Bacteria for Colon Cancer Immunotherapy</a>  
+  </div>
+    <div class="publication">
+        <span class="authors">D.J. Rohrbach, K.A. Carter, D. Luo, S. Shao, S. Aygun-Sunar, J.F. Lovell U. Sunar</span> – 
+        <a href="https://www.mdpi.com/1422-0067/26/3/1212" class="journal">Fluence Rate-Dependent Kinetics of Light-Triggered Liposomal Doxorubicin Assessed by Quantitative Fluorescence-Based Endoscopic Probe</a>
+    </div>
+    <div class="publication">
+        <span class="authors">D.J. Rohrbach, K.A. Carter, D. Luo, S. Shao, S. Aygun-Sunar, J.F. Lovell U. Sunar</span> – 
+        <a href="https://www.mdpi.com/1422-0067/26/3/1212" class="journal">Fluence Rate-Dependent Kinetics of Light-Triggered Liposomal Doxorubicin Assessed by Quantitative Fluorescence-Based Endoscopic Probe</a>     
         <!-- 2021 -->
     <div class="pub-year">
         <h2>2021</h2>
