--- a/people.html
+++ b/people.html
@@ -207,6 +207,26 @@
                 </p>
             </div>
         </section>
+
+        <section class="person-box">
+            <img src="graphics/members/anoop_web.jpg" class="profile-img" alt="Anoop Nilam">
+            <div class="person-info">
+                <h2>Anoop Nilam</h2>
+                <p>
+                Anoop completed his BS in UB BME on new cancer drug formulations. He is currently working as a RAP Associate Scientist in AstraZeneca.</p>
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/hailey_web.jpg" class="profile-img" alt="Hailey Kilian">
+            <div class="person-info">
+                <h2>Hailey Kilian</h2>
+                <p>
+                Hailey completed her MS on photoacoustic and x-ray contrast imaging of the gut. She is currently working as an Analytical Chemist in Corden Pharma.</p>
+                </p>
+            </div>
+        </section>
         
         <section class="person-box">
             <img src="graphics/members/boyang_web.jpg" class="profile-img" alt="Boyang Sun">
