--- a/people.html
+++ b/people.html
@@ -217,16 +217,6 @@
                 </p>
             </div>
         </section>
-
-        <section class="person-box">
-            <img src="graphics/members/hailey_web.jpg" class="profile-img" alt="Hailey Kilian">
-            <div class="person-info">
-                <h2>Hailey Kilian</h2>
-                <p>
-                Hailey completed her MS on photoacoustic and x-ray contrast imaging of the gut. She is currently working as an Analytical Chemist in Corden Pharma.</p>
-                </p>
-            </div>
-        </section>
         
         <section class="person-box">
             <img src="graphics/members/boyang_web.jpg" class="profile-img" alt="Boyang Sun">
@@ -403,7 +393,7 @@
             <div class="person-info">
                 <h2>Hailey Kilian</h2>
                 <p>
-                Hailey obtained her MS and undergraduate degree from UB BME in the lab. She worked on liposome formulations for contrast imaging and light-triggered cargo release.
+                Hailey obtained her MS and undergraduate degree from UB BME in the lab. She worked on liposome formulations for contrast imaging and light-triggered cargo release. She is currently working as an Analytical Chemist in Corden Pharma.
                 </p>
             </div>
         </section>
